force-app/main/default/objects/ampi__Geographical_Area__c/fields/SKF_Planned_Figures_status__c.field-meta.xml
<CustomField>
    <fullName>SKF_Planned_Figures_status__c</fullName>
    <label>SKF Planned Figures status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>