force-app/main/default/objects/ampi__Geographical_Area__c/fields/SOS_Role__c.field-meta.xml
<CustomField>
    <fullName>SOS_Role__c</fullName>
    <label>SOS Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOS Supports A Key Implementation Partner</fullName>
            </value>
            <value>
                <fullName>SOS Delivers Programme In Partnership</fullName>
            </value>
            <value>
                <fullName>SOS Is Main Implementer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>