force-app/main/default/objects/ampi__Geographical_Area__c/fields/System_ID__c.field-meta.xml
<CustomField>
    <fullName>System_ID__c</fullName>
    <inlineHelpText>Derived from Master Data: SOS Region ID, Country ID, Programme ID, Programme Unit ID</inlineHelpText>
    <label>Lucy System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>