force-app/main/default/objects/ampi__Geographical_Area__c/fields/Systems_Status_ID__c.field-meta.xml
<CustomField>
    <fullName>Systems_Status_ID__c</fullName>
    <inlineHelpText>Derived from LUCY SystemStatusID: &quot;REL&quot; Released or &quot;LKD&quot; Locked</inlineHelpText>
    <label>Status ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>