force-app/main/default/objects/ampi__Geographical_Area__c/fields/Tag_Settings__c.field-meta.xml
<CustomField>
    <fullName>Tag_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tag Settings</label>
    <referenceTo>tag__Tag_Settings__c</referenceTo>
    <relationshipLabel>Locations &amp; Programme Units</relationshipLabel>
    <relationshipName>Locations_Programme_Units</relationshipName>
    <type>Lookup</type>
</CustomField>