force-app/main/default/objects/ampi__Geographical_Area__c/fields/Thematic_Area__c.field-meta.xml
<CustomField>
    <fullName>Thematic_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>ampi__Thematic_Area__c</referenceTo>
    <relationshipLabel>P&amp;PUs</relationshipLabel>
    <relationshipName>P_PUs</relationshipName>
    <type>Lookup</type>
</CustomField>