force-app/main/default/objects/ampi__Geographical_Area__c/fields/Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Code__c</fullName>
    <formula>Code__c</formula>
    <label>Code</label>
    <type>Text</type>
</CustomField>