force-app/main/default/objects/ampi__Geographical_Area__c/fields/Unit_Suptype__c.field-meta.xml
<CustomField>
    <fullName>Unit_Suptype__c</fullName>
    <label>Unit Suptype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unit_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction project-0</fullName>
            </value>
            <value>
                <fullName>YC-Youth Care-140</fullName>
            </value>
            <value>
                <fullName>OAC-Other Alternative Care-150</fullName>
            </value>
            <value>
                <fullName>SFC-SOS Family Care-160</fullName>
            </value>
            <value>
                <fullName>FFC-Foster Family Care-170</fullName>
            </value>
            <value>
                <fullName>SGH-Small Group Homes-180</fullName>
            </value>
            <value>
                <fullName>FS-Family Strengthening-210</fullName>
            </value>
            <value>
                <fullName>EDU-Primary &amp; Secondary Education-310</fullName>
            </value>
            <value>
                <fullName>CT-Care Training-320</fullName>
            </value>
            <value>
                <fullName>ECD-Early Childhood Care &amp; Development-330</fullName>
            </value>
            <value>
                <fullName>EET-Employment &amp; Entrepreneurship Training-340</fullName>
            </value>
            <value>
                <fullName>HPP-Health Promotion &amp; Prevention-410</fullName>
            </value>
            <value>
                <fullName>MED-Medical Care-420</fullName>
            </value>
            <value>
                <fullName>ER-Emergency Response-510</fullName>
            </value>
            <value>
                <fullName>OA-Other Activities-610</fullName>
            </value>
            <value>
                <fullName>CV-Inactive SOS Children&apos;s Village-100</fullName>
            </value>
            <value>
                <fullName>YF1-Inactive SOS Youth Facility-201</fullName>
            </value>
            <value>
                <fullName>YF2-Inactive SOS Youth Programme-202</fullName>
            </value>
            <value>
                <fullName>KG-Inactive SOS Kindergarten-300</fullName>
            </value>
            <value>
                <fullName>SL-Inactive SOS Hermann Gmeiner School-400</fullName>
            </value>
            <value>
                <fullName>SL1-Inactive SOS HG School I-401</fullName>
            </value>
            <value>
                <fullName>SL2-Inactive SOS HG School II-402</fullName>
            </value>
            <value>
                <fullName>TC1-Inactive SOS Mother and Staff Training Centre-501</fullName>
            </value>
            <value>
                <fullName>TC2-Inactive SOS Vocational Training Centre-502</fullName>
            </value>
            <value>
                <fullName>SC1-Inactive SOS Family Strengthening Programme-601</fullName>
            </value>
            <value>
                <fullName>SC2-Inactive SOS Social Centre-602</fullName>
            </value>
            <value>
                <fullName>MC-Inactive SOS Medical Centre-700</fullName>
            </value>
            <value>
                <fullName>MC1-Inactive SOS Medical Centre I-701</fullName>
            </value>
            <value>
                <fullName>MC2-Inactive SOS Medical Centre II-702</fullName>
            </value>
            <value>
                <fullName>EP-Inactive SOS Emergency Relief Programme-800</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>