force-app/main/default/objects/ampi__Geographical_Area__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-Construction Project</fullName>
            </value>
            <value>
                <fullName>1-Alternative Care</fullName>
            </value>
            <value>
                <fullName>2-Family Strengthening</fullName>
            </value>
            <value>
                <fullName>3-Education</fullName>
            </value>
            <value>
                <fullName>4-Health</fullName>
            </value>
            <value>
                <fullName>5-Emergency Response</fullName>
            </value>
            <value>
                <fullName>6-Other Activites</fullName>
            </value>
            <value>
                <fullName>10-SOS Children&apos;s Village</fullName>
            </value>
            <value>
                <fullName>20-SOS Youth Facility</fullName>
            </value>
            <value>
                <fullName>30-SOS Kindergarten</fullName>
            </value>
            <value>
                <fullName>40-SOS Hermann Gmeiner School</fullName>
            </value>
            <value>
                <fullName>50-SOS Vocational Training Centre</fullName>
            </value>
            <value>
                <fullName>60-SOS Social Centre</fullName>
            </value>
            <value>
                <fullName>70-SOS Medical Centre</fullName>
            </value>
            <value>
                <fullName>80-SOS Emergency Relief Programme</fullName>
            </value>
            <value>
                <fullName>91-International Office Region</fullName>
            </value>
            <value>
                <fullName>93-Inactive Continental Office</fullName>
            </value>
            <value>
                <fullName>94-International Office</fullName>
            </value>
            <value>
                <fullName>95-National Legal Entity</fullName>
            </value>
            <value>
                <fullName>96-National Office</fullName>
            </value>
            <value>
                <fullName>99-Hermann Gmeiner Academy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>