force-app/main/default/objects/ampi__Geographical_Area__c/recordTypes/Organisational_Unit.recordType-meta.xml
<RecordType>
    <fullName>Organisational_Unit</fullName>
    <active>true</active>
    <label>Organisational Unit</label>
</RecordType>