force-app/main/default/objects/ampi__Geographical_Area__c/recordTypes/Programme_Location.recordType-meta.xml
<RecordType>
    <fullName>Programme_Location</fullName>
    <active>true</active>
    <label>Programme</label>
</RecordType>