force-app/main/default/objects/ampi__Geographical_Area__c/recordTypes/Region.recordType-meta.xml
<RecordType>
    <fullName>Region</fullName>
    <active>true</active>
    <label>Region</label>
</RecordType>