force-app/main/default/objects/ampi__Geographical_Area__c/validationRules/Not_changing_code_countries.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_changing_code_countries</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp; RecordType.DeveloperName = &apos;Country&apos; &amp;&amp; ISCHANGED(Code__c)</errorConditionFormula>
    <errorMessage>Not possible to change the code for Countries</errorMessage>
</ValidationRule>