force-app/main/default/objects/ampi__Geographical_Area__c/validationRules/Not_changing_code_programmes.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_changing_code_programmes</fullName>
    <active>true</active>
    <errorConditionFormula>region_code_registered__c == true &amp;&amp; TEXT(ampi__Type__c) == &apos;Programme&apos; &amp;&amp; (TEXT(Program_Type__c) == &apos;Programme&apos; || TEXT(Program_Type__c) == &apos;National Office Programme&apos;) &amp;&amp; ISCHANGED(Code__c)</errorConditionFormula>
    <errorMessage>Not possible to change the code for Programmes or National Office Programme</errorMessage>
</ValidationRule>