force-app/main/default/objects/ampi__Geographical_Area__c/validationRules/Not_changing_code_pu_nmus.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_changing_code_pu_nmus</fullName>
    <active>false</active>
    <errorConditionFormula>region_code_registered__c == true &amp;&amp; (TEXT(ampi__Type__c) == &apos;Programme Unit&apos; || TEXT(ampi__Type__c) == &apos;National Management Unit&apos;) &amp;&amp; ISCHANGED(Code__c)</errorConditionFormula>
    <errorMessage>Not possible to change the code for Programme Units or National Management Units</errorMessage>
</ValidationRule>