force-app/main/default/objects/ampi__Geographical_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Pillar__c</columns>
    <columns>Program_Unit_Type__c</columns>
    <columns>SOS_Role__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>ampi__Parent_Geographical_Area__c</columns>
    <columns>Parent_MA__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Type__c</field>
        <operation>equals</operation>
        <value>Country,Region,Programme,Programme Unit,National Management Unit</value>
    </filters>
    <label>All</label>
</ListView>