force-app/main/default/objects/ampi__Geographical_Area__c/listViews/All_Countries.listView-meta.xml
<ListView>
    <fullName>All_Countries</fullName>
    <columns>NAME</columns>
    <columns>Long_Name__c</columns>
    <columns>ampi__Parent_Geographical_Area__c</columns>
    <columns>Continent__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>ampi__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ampi__Geographical_Area__c.Country</value>
    </filters>
    <label>All Countries</label>
</ListView>