force-app/main/default/objects/ampi__Geographical_Area__c/listViews/All_National_Management_Units_all.listView-meta.xml
<ListView>
    <fullName>All_National_Management_Units_all</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Pillar__c</columns>
    <columns>Program_Unit_Type__c</columns>
    <columns>SOS_Role__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>ampi__Parent_Geographical_Area__c</columns>
    <columns>Parent_MA__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Code__c</columns>
    <columns>Unique_Code__c</columns>
    <columns>System_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Type__c</field>
        <operation>equals</operation>
        <value>National Management Unit</value>
    </filters>
    <label>All National Management Units</label>
</ListView>