force-app/main/default/objects/ampi__Geographical_Area__c/listViews/All_Programme_Units_with_Parent_MA.listView-meta.xml
<ListView>
    <fullName>All_Programme_Units_with_Parent_MA</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Long_Name__c</columns>
    <columns>Parent_MA__c</columns>
    <columns>ampi__Parent_Geographical_Area__c</columns>
    <columns>Active__c</columns>
    <columns>Pillar__c</columns>
    <columns>Program_Unit_Type__c</columns>
    <columns>SOS_Role__c</columns>
    <columns>ampi__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_MA__c</field>
        <operation>contains</operation>
        <value>Alsace</value>
    </filters>
    <label>All Programme Units with Parent MA</label>
</ListView>