force-app/main/default/objects/ampi__Geographical_Area__c/listViews/All_Programmes.listView-meta.xml
<ListView>
    <fullName>All_Programmes</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Active__c</columns>
    <columns>ampi__Parent_Geographical_Area__c</columns>
    <columns>Parent_MA__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Long_Name__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Date_Founded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ampi__Geographical_Area__c.Programme_Location</value>
    </filters>
    <label>All Programmes</label>
</ListView>