force-app/main/default/objects/ampi__Geographical_Area__c/listViews/All_Regions.listView-meta.xml
<ListView>
    <fullName>All_Regions</fullName>
    <columns>NAME</columns>
    <columns>Long_Name__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ampi__Geographical_Area__c.Region</value>
    </filters>
    <label>All Regions</label>
</ListView>