force-app/main/default/objects/ampi__Geographical_Area__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Pillar__c</columns>
    <columns>Program_Unit_Type__c</columns>
    <columns>SOS_Role__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>ampi__Parent_Geographical_Area__c</columns>
    <columns>Parent_MA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>