force-app/main/default/objects/ampi__Geographical_Area__c/listViews/SKF_Planned_Figure_Validated.listView-meta.xml
<ListView>
    <fullName>SKF_Planned_Figure_Validated</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Pillar__c</columns>
    <columns>Program_Unit_Type__c</columns>
    <columns>SOS_Role__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>ampi__Parent_Geographical_Area__c</columns>
    <columns>Parent_MA__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SKF_Planned_Figures_status__c</field>
        <operation>equals</operation>
        <value>Validated</value>
    </filters>
    <label>SKF Planned Figure Validated</label>
</ListView>